# zbarscanner

./: .clang-format  CMakeLists.txt  README.md  THIRD_PARTY_LICENSE  main.c  resource.h  result.c  result.h  zbarscanner.exe.manifest  zbarscanner.rc
qrcodegen/: CMakeLists.txt
zbar/: CMakeLists.txt  debug.h  decoder.c  decoder.h  error.c  error.h  image.c  image.h  img_scanner.c  img_scanner.h  qrcode.h  refcnt.h  scanner.c  sqcode.c  sqcode.h  svg.h  symbol.c  symbol.h  timer.h
zbar/decoder/: qr_finder.c
zbar/include/: config.h  zbar.h
zbar/qrcode/: bch15_5.c  bch15_5.h  binarize.c  binarize.h  isaac.c  isaac.h  qrdec.c  qrdec.h  qrdectxt.c  rs.c  rs.h  util.c  util.h
